# JellyfinAISubs

./: README.md
.github/workflows/: publish-backend-image.yml
VocalIsolation/: PROJECT.md  README.md  TASKS.md  pyproject.toml  rocm_check.py
VocalIsolation/tests/: test_cli.py
VocalIsolation/viso/: cli.py
VocalIsolation/vocalisolation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
WavToSubtitle/: PROJECT.md  README.md  TASKS.md  pyproject.toml
WavToSubtitle/tests/: test_cli_mocked.py  test_formatters.py
WavToSubtitle/wavsub/: cli.py
WavToSubtitle/wavtosubtitle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
backend/: Dockerfile  README.md  pyproject.toml
backend/aisubs/: api.py  cli.py  core.py
deploy/: docker-compose.yml
jellyfin-plugin/: README.md  SETUP.md
jellyfin-plugin/AI.Subs.Jellyfin/: AI.Subs.Jellyfin.csproj  BackendClient.cs  GenerateDtos.cs  GenerateService.cs  Plugin.cs  PluginConfig.cs
jellyfin-plugin/AI.Subs.Jellyfin/meta/: configPage.html
jellyfin-plugin/repo-manifest/: manifest.template.json
scripts/: bootstrap.sh
