[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wavtosubtitle"
version = "0.1.0"
description = "CLI tool to generate SRT/LRC subtitles from WAV audio"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "faster-whisper>=1.0.0",
]

[project.scripts]
wavsub = "wavsub.cli:main"

[tool.setuptools]
packages = ["wavsub"]
