[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-subs"
version = "0.1.0"
description = "Unified subtitle/lyrics backend for Jellyfin"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "faster-whisper>=1.0.0",
  "pydantic>=2.8.0",
]

[project.scripts]
ai-subs = "aisubs.cli:main"

[tool.setuptools]
packages = ["aisubs"]
